--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chrome-extension-boilerplate-react",
-  "version": "4.3.5",
-  "description": "A chrome extension boilerplate built with React 17, Webpack 5, and Webpack Dev Server 4",
+  "name": "sp-editor-extension-manifest-v3",
+  "version": "7.0.0",
+  "description": "SP Editor using v3 manifest",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lxieyang/chrome-extension-boilerplate-react.git"
+    "url": "https://github.com/tavikukko/chrome-extension-boilerplate-react.git"
   },
   "scripts": {
     "build": "node utils/build.js",
